Alignment issues on toc and edit resoruce popup close button issue resolved

--- a/src/main/java/org/ednovo/gooru/client/mvp/folder/toc/floderToc.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/folder/toc/floderToc.css
@@ -121,7 +121,7 @@ button.primary:hover {
 .marginDiv h4 {
 	color: #1076bb;
 	font-weight: bold;
-	font-size:16pt;
+	font-size:16px;
 	line-height: 25px;
 	display: inline-block;
 	margin-top: 0;
