--- a/src/main/java/org/ednovo/gooru/client/mvp/folder/toc/folderStyleToc.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/folder/toc/folderStyleToc.css
@@ -767,7 +767,7 @@
 .folderTitleStyle {
 	color: #0066cc;
 	font-weight: bold;
-	font-size: 18px
+	font-size: 18px;
 }
 .loadingImageMainDiv {
 	width: 100%;
