--- a/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/Collection.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/Collection.css
@@ -1156,10 +1156,10 @@ float: left;
 	margin-top:20px;
 }
 .primaryLabelContainer{
-	width: 25%;
+	width: 26%;
 }
 .secondaryLabelContainer{
-	width: 29%;
+	width: 30%;
 }
 .primaryToggleArrowBottom {
 	background: url("images/toggle_arrow_down.png") no-repeat transparent;
